tests/neg/i17738-infix-object/NestedInfixObject.scala
object ToplevelObject:
  infix object NestedInfixObject // error
